--- a/Challenges/Misc/login-trivia/infra/templates/questions.html
+++ b/Challenges/Misc/login-trivia/infra/templates/questions.html
@@ -20,15 +20,15 @@
 				<label for="q1">
 					<i class="fas fa-question-circle"></i>
 				</label>
-				<input type="text" name="q1" placeholder="Question 1" id="q1" required>
+				<input type="text" name="q1" placeholder="Name of your first pet" id="q1" required>
 				<label for="q2">
 					<i class="fas fa-question-circle"></i>
 				</label>
-				<input type="text" name="q2" placeholder="Question 2" id="q2" required>
+				<input type="text" name="q2" placeholder="Mother's maiden name" id="q2" required>
 				<label for="q3">
 					<i class="fas fa-question-circle"></i>
 				</label>
-				<input type="text" name="q3" placeholder="Question 3" id="q3" required>
+				<input type="text" name="q3" placeholder="Street you grew up on" id="q3" required>
 				<div >
 					<div class="msg">{{ msg }}</div>
 				</div>
